Fix mobile overflow shaking

--- a/products/static/products/CSS/base.css
+++ b/products/static/products/CSS/base.css
@@ -4,6 +4,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+html, body {
+    overflow-x: hidden;
+    max-width: 100%;
+}
 
 body {
     font-family: 'Inter', sans-serif;
