--- a/products/static/products/css/index.css
+++ b/products/static/products/css/index.css
@@ -729,11 +729,12 @@
     display:flex;
     justify-content: space-between;
     margin-top: 30px;
-    height: 100px;
+    height: auto;
+    padding: 20px 10px;
   }
 
   .spam {
-    font-size: 25px;
+    font-size: 20px;
   }
 
   .spam span {
@@ -744,7 +745,7 @@
   .viewport a {
     text-decoration: none;
     margin-left: 10px;
-    font-size: 15px;
+    font-size: 13px;
     color: #d86c48;
   }
 
